--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "ejs": "*"
+    "ejs": "*",
+    "sequelize": "latest",
+    "pg": "latest"
   }
 }
