The basic movement demo now works. This needs to be integrated with the registration/character stuff and then we should be done for iteration 1

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "3.1.0",
     "ejs": "*",
     "sequelize": "latest",
-    "pg": "latest"
+    "pg": "latest",
+    "socket.io": "latest",
+    "session.socket.io": "latest"
   }
 }
