--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sequelize": "latest",
     "pg": "latest",
     "socket.io": "latest",
-    "session.socket.io": "latest"
+    "session.socket.io": "latest",
+    "mocha": "latest"
   }
 }
