--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "test": "make test"
   },
   "dependencies": {
     "express": "3.1.0",
@@ -14,6 +15,7 @@
     "session.socket.io": "latest",
     "mocha": "latest",
     "should": "latest",
-    "supertest": "latest"
+    "supertest": "latest",
+    "request": "latest"
   }
 }
